--- a/TlDll/TlDll.vcxproj
+++ b/TlDll/TlDll.vcxproj
@@ -190,6 +190,7 @@
     </ResourceCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="1.cpp" />
     <ClCompile Include="AsmGroundParcel.cpp" />
     <ClCompile Include="AsmItem.cpp" />
     <ClCompile Include="AsmMonster.cpp" />
