--- a/TlDll/TlDll.vcxproj.filters
+++ b/TlDll/TlDll.vcxproj.filters
@@ -117,6 +117,7 @@
       <Filter>资源文件</Filter>
     </None>
     <None Include="System.lua" />
+    <None Include="cpp.hint" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="framework.h">
